--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>多多岛攻略-托尼老师出品</title>
+    <title>多多岛攻略</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <link href="css/page.index.css" rel="stylesheet" />
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col">
 
-                <a class="b-case-box">
+                <a class="b-case-box" href="/gl/01.html" target="_blank">
 
                     <div class="e-case-top m-top-e74c3c">
                         <span>【攻略】VIP8玩法必读</span>
@@ -36,9 +36,7 @@
             </div>
 
             <div class="col">
-
-                <a class="b-case-box">
-
+                <a class="b-case-box" href="/gl/02.html" target="_blank">
                     <div class="e-case-top m-top-3498db">
                         <span>【攻略】-游戏中的属性装备出处</span>
                     </div>
@@ -49,7 +47,7 @@
             </div>
 
             <div class="col">
-                <a class="b-case-box">
+                <a class="b-case-box" href="/gl/03.html" target="_blank">
                     <div class="e-case-top m-top-3498db">
                         <span>【攻略】部分物品的作用</span>
                     </div>
@@ -63,17 +61,17 @@
 
             <div class="col">
 
-                <div class="b-case-box">
+                <a class="b-case-box" href="/gl/04.html" target="_blank">
 
                     <div class="e-case-top m-top-3498db">
                         <span>【攻略】-游戏里面的各种技巧和解说</span>
                     </div>
                     <p class="e-case-desc">
-                        -宠物捡东西漂移？<br/>
+                        -宠物捡东西漂移？<br />
                         -如何携带多个宠物？<br />
                         -如何快速退出副本不用走光圈？<br />
                     </p>
-                </div>
+                </a>
             </div>
         </div>
 
@@ -87,7 +85,7 @@
         <div class="row" style="margin-top:30px;">
             <div class="col">
 
-                <div class="b-case-box">
+                <a class="b-case-box" href="/gl/05.html" target="_blank">
 
                     <div class="e-case-top m-top-3498db">
                         <span>【攻略】-如何通过游戏赚钱（RMB）</span>
@@ -95,10 +93,10 @@
                     <p class="e-case-desc">
                         对于长期玩家，如何通过玩游戏赚个鸡腿钱。
                     </p>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <a class="b-case-box">
+                <a class="b-case-box" href="/gl/06.html" target="_blank">
                     <div class="e-case-top m-top-3498db">
                         <span>【攻略】-抢楼活动攻略</span>
                     </div>
