--- a/gl/03.html
+++ b/gl/03.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -35,7 +35,7 @@
             <br />
             <span style="color: #e74c3c">【红包】</span><br />
             中红包：仅能用来换购大红包，五个中红包+5张蓝蜗牛邮票可以换购一个大红包，中红包的市场价格30P每个。如果想收，可能25P就能收到。<br />
-            ，爆中红包的唯一怪物是五大BOSS的斯乌。稳定一次出3个。<br />
+            ，爆中红包的唯一怪物是五大BOSS的森兰丸。稳定一次出3个。<br />
             大红包：仅能用来换购新年红包，2个大红包+国庆纪念币可以兑换一个新年红包。大红包的市场价格在150P左右。<br />
             新年红包：可随机开出1000~9999元宝。<br />
             红包物品上写的有字，中红包上面写了个“中”，大红包上面写了个“大”，新年红包上面写了个“新”<br />
