--- a/index.html
+++ b/index.html
@@ -76,11 +76,59 @@
         </div>
 
 
+        <div class="row" style="margin-top:30px;">
+
+            <div class="col">
+                <a class="b-case-box" href="/gl/07.html" target="_blank">
+                    <div class="e-case-top m-top-3498db">
+                        <span>【攻略】-破功飞升详解</span>
+                    </div>
+                    <p class="e-case-desc">
+                        -飞升伤害计算？<br />
+                        -超级属性？<br />
+                        -什么是破功？<br />
+                    </p>
+                </a>
+            </div>
+
+            <div class="col">
+                <a class="b-case-box" target="_blank">
+                    <div class="e-case-top m-top-3498db">
+                        <span>-</span>
+                    </div>
+                    <p class="e-case-desc">
+                        -
+                    </p>
+                </a>
+            </div>
+
+            <div class="col">
+                <a class="b-case-box" target="_blank">
+                    <div class="e-case-top m-top-3498db">
+                        <span>-</span>
+                    </div>
+                    <p class="e-case-desc">
+                        -
+                    </p>
+                </a>
+            </div>
+
+            <div class="col">
+                <a class="b-case-box"  target="_blank">
+                    <div class="e-case-top m-top-3498db">
+                        <span>-</span>
+                    </div>
+                    <p class="e-case-desc">
+                        -
+                    </p>
+                </a>
+            </div>
+        </div>
+
 
         <blockquote class="blockquote" style="margin-top:30px;">
             <p class="mb-0" style="color:#fff;">高手进阶</p>
         </blockquote>
-
 
         <div class="row" style="margin-top:30px;">
             <div class="col">
@@ -112,7 +160,7 @@
                 <div class="b-case-box">
 
                     <div class="e-case-top m-top-3498db">
-                        <span>-待完善</span>
+                        <span>-</span>
                     </div>
                     <p class="e-case-desc">
                         -
@@ -124,7 +172,7 @@
                 <div class="b-case-box">
 
                     <div class="e-case-top m-top-3498db">
-                        <span>-待完善</span>
+                        <span>-</span>
                     </div>
                     <p class="e-case-desc">
                         -
