--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <div class="container-fluid">
         <!--<img src="img/1434712922294-2.png" style="width:100%;margin:0;padding:0;"/>-->
     </div>
-    <div class="container" style="margin-top:160px;">
-        
-    </div>
-    <div class="container" style="">
+    <div class="container">
+        <div style="height:60px;"></div>
         <blockquote class="blockquote">
             <p class="mb-0" style="color:#fff;">新人必读</p>
         </blockquote>
@@ -156,17 +154,17 @@
 
            
             <div class="col">
-
-                <div class="b-case-box">
-
+                <a class="b-case-box" href="/gl/08.html" target="_blank">
                     <div class="e-case-top m-top-3498db">
-                        <span>-</span>
+                        <span>【攻略】-什么是满V7</span>
                     </div>
                     <p class="e-case-desc">
-                        -
+                        玩家口中的满V7是什么？
+                        如何满V7？
                     </p>
-                </div>
+                </a>
             </div>
+
             <div class="col">
 
                 <div class="b-case-box">
@@ -180,10 +178,17 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="container" style="margin-top:160px;">
+        <div class="card card-inverse card-danger text-center" style="margin-top:30px;">
+            <div class="card-block">
+                <blockquote class="card-blockquote">
+                    <p>本站所有攻略信息，均来自于【清华大学】家族提供。</p>
+                    <footer>-托尼</footer>
+                </blockquote>
+            </div>
+        </div>
 
+        <div style="height:60px;"></div>
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.bootcss.com/popper.js/1.9.3/umd/popper.min.js" integrity="sha384-knhBOwpf8/28D6ygAjJeb0STNDZqfPbKaWQ8wIz/xgSc0xXwKsKhNype8fmfMka2" crossorigin="anonymous"></script>
