--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>清华大学家族事件</title>
 
+    <link href="/tb.ico" type="image/x-icon" rel="shortcut icon" />
     <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen">
     <link rel="stylesheet" href="inc/colorbox.css" type="text/css" media="screen">
