--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     
     <title>清华大学家族事件</title>
 
-    <link href="http://duoduogl.top/tb.ico" type="image/x-icon" rel="shortcut icon">
-    <link rel="stylesheet" href="./清华大学家族事件_files/screen.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="./清华大学家族事件_files/responsive.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="./清华大学家族事件_files/colorbox.css" type="text/css" media="screen">
+    <link href="/tb.ico" type="image/x-icon" rel="shortcut icon">
+    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/css/responsive.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/inc/colorbox.css" type="text/css" media="screen">
 
 </head>
 <body>
-    <script src="./清华大学家族事件_files/hm.js.下载"></script><script src="./清华大学家族事件_files/googlegg.js.下载"></script>
+    <script src="/demos/googlegg.js"></script>
 
     <div class="container">
         <h1>清华大学家族事件</h1>
@@ -137,9 +137,9 @@
 
     </div><!-- /.container -->
     <!-- GLOBAL CORE SCRIPTS -->
-    <script type="text/javascript" src="./清华大学家族事件_files/jquery.min.js.下载"></script>
-    <script type="text/javascript" src="./清华大学家族事件_files/colorbox.js.下载"></script>
-    <script type="text/javascript" src="./清华大学家族事件_files/timeliner.min.js.下载"></script>
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/inc/colorbox.js"></script>
+    <script type="text/javascript" src="/js/timeliner.min.js"></script>
     <script>
         $(document).ready(function () {
             $.timeliner({
