--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <script>
         $(document).ready(function () {
             $.timeliner({
-                startOpen: ['#20170729EX','#20170720EX', '#20170715EX']
+                startOpen: ['#20170729EX','#20170720EX']
             });
             $.timeliner({
                 timelineContainer: '#timelineContainer_2'
