--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <br class="clear">
 
             <div class="timelineMajor">
-                <h2 class="timelineMajorMarker"><span>2017-07-29（未开始）</span></h2>
+                <h2 class="timelineMajorMarker"><span>2017-07-29</span></h2>
                 <dl class="timelineMinor">
-                    <dt id="20170729"><a class="open" style="font-size: 1.2em;">【活动】07-29周六晚间21:00（尚未开始）</a></dt>
+                    <dt id="20170729"><a class="open" style="font-size: 1.2em;">【活动】07-29周六晚间21:00</a></dt>
                     <dd class="timelineEvent" id="20170729EX" style="display: block;">
                         <h3>晚间21:00</h3>
                         <p>
