--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
                         <br class="clear">
                     </dd><!-- /.timelineEvent -->
                 </dl><!-- /.timelineMinor -->
+				
+				<dl class="timelineMinor">
+                    <dt id="201707292"><a class="open" style="font-size: 1.2em;">【活动】07-29周六晚间21:45（家族跳跳+高地3）</a></dt>
+                    <dd class="timelineEvent" id="201707292EX" style="display: block;">
+                        <h3>家族跳跳-高地3</h3>
+                        <p>
+                            第一名：<span style='width:200px;display: inline-block;'></span>
+							<span style='color:#00CC33;'>奖励1.2 * 3 （戒指、腰带、吊坠）</span><br/>
+                            第二名：<span style='width:200px;display: inline-block;'></span>
+							<span style='color:#00CC33;'>奖励1.2 * 2  (腰带、耳环)</span><br/>
+							第三名：<span style='width:200px;display: inline-block;'></span>
+							<span style='color:#00CC33;'>奖励1.2 * 1 （不挑）</span><br/>
+                        </p>
+                        <br class="clear">
+                    </dd><!-- /.timelineEvent -->
+                </dl><!-- /.timelineMinor -->
             </div>
 
             <div class="timelineMajor">
@@ -143,7 +159,7 @@
     <script>
         $(document).ready(function () {
             $.timeliner({
-                startOpen: ['#20170729EX','#20170720EX']
+                startOpen: ['201707292EX','#20170729EX','#20170720EX']
             });
             $.timeliner({
                 timelineContainer: '#timelineContainer_2'
