--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <script>
         $(document).ready(function () {
             $.timeliner({
-                startOpen: ['201707292EX','#20170729EX','#20170720EX']
+                startOpen: ['#20170729EX','#20170720EX']
             });
             $.timeliner({
                 timelineContainer: '#timelineContainer_2'
