--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </dl><!-- /.timelineMinor -->
 				
 				<dl class="timelineMinor">
-                    <dt id="201707292"><a class="open" style="font-size: 1.2em;">【活动】07-29周六晚间21:45（家族跳跳+高地3）</a></dt>
+                    <dt id="201707292"><a style="font-size: 1.2em;">【活动】07-29周六晚间21:45（家族跳跳+高地3）</a></dt>
                     <dd class="timelineEvent" id="201707292EX" style="display: block;">
                         <h3>家族跳跳-高地3</h3>
                         <p>
