--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
 
             <br class="clear">
 
+			
+            <div class="timelineMajor">
+                <h2 class="timelineMajorMarker"><span>2017-08-01</span></h2>
+                <dl class="timelineMinor">
+                    <dt id="20170801"><a class="open" style="font-size: 1.2em;">【活动】致敬八一。家族跳跳-忍苦1【未进行】</a></dt>
+                    <dd class="timelineEvent" id="20170801EX" style="display: block;">
+                        <h3>晚间21：00</h3>
+                        <p>
+                            活动奖励：神龙箱子*1，只取第一名，谁会在乎第二？<br/>
+							<br/>
+							<span style='color:#e74c3c'>活动期间，请所有人员保持低调，尽量避免刷喇叭，招来其他外部人员捣乱，影响心情！</span>
+							<br/>
+							<span style='color:#e74c3c'>【重要】如果我个人认为你不需要神龙，我是不会发放的！！！</span>
+							<br/>
+							<br/>
+							之所以选择忍苦1，不选择更高难度的地图是因为：<br/>
+							1：萌新手残的多，所以挑选一个入门地图作为活动<br/>
+							2：该地图在人多的情况下，高手也容易失误，只要萌新手稳、心稳，第一还是很有希望的。<br/>
+							3：我想照顾萌新的感受，所以我不会照顾跳跳高手的感受，不爽你用神龙箱子砸我啊。<br/>
+							<br/>
+                        </p>
+                        <br class="clear">
+                    </dd><!-- /.timelineEvent -->
+                </dl><!-- /.timelineMinor -->
+            </div>
+			
             <div class="timelineMajor">
                 <h2 class="timelineMajorMarker"><span>2017-07-29</span></h2>
                 <dl class="timelineMinor">
@@ -159,7 +185,7 @@
     <script>
         $(document).ready(function () {
             $.timeliner({
-                startOpen: ['#20170729EX','#20170720EX']
+                startOpen: ['20170801EX','#20170729EX','#20170720EX']
             });
             $.timeliner({
                 timelineContainer: '#timelineContainer_2'
