--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <script>
         $(document).ready(function () {
             $.timeliner({
-                startOpen: ['20170801EX','#20170729EX','#20170720EX']
+                startOpen: ['#20170801EX','#20170729EX','#20170720EX']
             });
             $.timeliner({
                 timelineContainer: '#timelineContainer_2'
