--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <dd class="timelineEvent" id="20170801EX" style="display: block;">
                         <h3>晚间21：00</h3>
                         <p>
-                            活动奖励：神龙箱子*1，只取第一名，谁会在乎第二？<br/>
+                            活动奖励：<span style='color:#00CC33;'>神龙箱子 * 1</span>，只取第一名，谁会在乎第二？<br/>
 							<br/>
 							<span style='color:#e74c3c'>活动期间，请所有人员保持低调，尽量避免刷喇叭，招来其他外部人员捣乱，影响心情！</span>
 							<br/>
