--- a/index.html
+++ b/index.html
@@ -34,18 +34,14 @@
                     <dd class="timelineEvent" id="20170801EX" style="display: block;">
                         <h3>晚间21：00</h3>
                         <p>
-							活动1：跳跳-忍苦1
-                            活动奖励：<span style='color:#00CC33;'>神龙箱子 * 1<br/></span>，只取第一名，谁会在乎第二？<br/>
+							活动1：跳跳-忍苦1<br/>
+                            活动奖励：<span style='color:#00CC33;'>神龙箱子 * 1</span>，只取第一名，谁会在乎第二？<br/>
 							<br/>
 							<br/>
-							活动2：跳跳-火山1（天使赞助人：始于初见）
-							活动奖励：<span style='color:#00CC33;'>
-							1.7 * 1<br/>  
-							红包 * 3<br/>
-							1组PP  <br/>
-							精灵图腾 * 1<br/>
-							1.2不挑 * 1<br/>
-							</span>，只取第一名，谁会在乎第二？<br/>
+							活动2：跳跳-火山1（天使赞助人：始于初见）<br/>
+							活动奖励：<span style='color:#00CC33;'>1.7 * 1、红包 * 3、1组PP  、精灵图腾 * 1、1.2不挑 * 1、
+							<br/>
+							</span>同样只取第一名，谁会在乎第二？<br/>
 							
 							
 							<span style='color:#e74c3c'>活动期间，请所有人员保持低调，尽量避免刷喇叭，招来其他外部人员捣乱，影响心情！</span>
