--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                             活动奖励：<span style='color:#00CC33;'>神龙箱子 * 1</span>，只取第一名，谁会在乎第二？<br/>
 							<br/>
 							<br/>
-							活动2：跳跳-火山1（天使赞助人：始于初见）<br/>
-							活动奖励：<span style='color:#00CC33;'>1.7 * 1、红包 * 3、1组PP  、精灵图腾 * 1、1.2不挑 * 1、
+							活动2：跳跳-火山1（天使赞助人：安囝儿）<br/>
+							活动奖励：<span style='color:#00CC33;'>三组PP
 							<br/>
 							</span>同样只取第一名，谁会在乎第二？<br/>
 							
