--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="timelineMajor">
                 <h2 class="timelineMajorMarker"><span>2017-08-01</span></h2>
                 <dl class="timelineMinor">
-                    <dt id="20170801"><a class="open" style="font-size: 1.2em;">【活动】致敬八一。家族跳跳-忍苦1 + 火山1【未进行】</a></dt>
+                    <dt id="20170801"><a class="open" style="font-size: 1.2em;">【活动】致敬八一。家族跳跳-忍苦1 + 火山1</a></dt>
                     <dd class="timelineEvent" id="20170801EX" style="display: block;">
                         <h3>晚间21：00</h3>
                         <p>
