--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <dd class="timelineEvent" id="20170805EX" style="display: block;">
                         <h3>晚间21：30</h3>
                         <p>
-                            【材料马拉松。】（主活动）<br /> 
+                            【材料马拉松。】（正赛）<br /> 
                             所有人在4X6D集合，等待公布第一轮材料。<br />
                             【材料A * 30】，凑齐后在4X6D交付任务。然后会得到材料B的信息<br />
                             【材料B * 20】，凑齐后在4X6D交付任务。然后会得到材料C的信息<br />
@@ -119,8 +119,6 @@
                             <span style='color:#00CC33;'>奖励99P</span><br />
                             幸运奖：1分,三个名额<span style='width:136px;display: inline-block;'></span>
                             <span style='color:#00CC33;'>奖励66P</span><br /><br />
-
-
                             活动1：暂定，一定是简单的活动，不想占用大家太多的娱乐时间<br />
                             第一名：4分<span style='width:200px;display: inline-block;'></span>
                             <span style='color:#00CC33;'>奖励188P+1.2不挑</span><br />
