--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="timelineToggle"><p><a class="expandAll">+ expand all</a></p></div>
             <br class="clear">
             <div class="timelineMajor">
-                <h2 class="timelineMajorMarker"><span>2017-08-05（未进行）</span></h2>
+                <h2 class="timelineMajorMarker"><span>2017-08-05</span></h2>
                 <dl class="timelineMinor">
                     <dt id="20170805"><a class="open" style="font-size: 1.2em;">【活动】材料马拉松正赛+特别赛+拼手速+拍照+天降横财</a></dt>
                     <dd class="timelineEvent" id="20170805EX" style="display: block;">
